# i2c_imu

./: CMakeLists.txt  package.xml
launch/: i2c_imu_auto.launch  mpu_9150_param.launch
param/: imu.yaml
src/: i2c_imu_node.cpp
srv/: SetCalibration.srv
